k8s/apps/media/qbittorrent/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-torrent-in
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
          podSelector:
            matchLabels:
              app: downloader
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home
          podSelector:
            matchLabels:
              app: hass
      ports:
        - protocol: TCP
          port: web
